modified:   About Us/Our Story-dummy.js 	modified:   About Us/Our story-dummy.css 	modified:   About Us/Our_Story-dummy.html

--- a/About Us/Our_Story-dummy.html
+++ b/About Us/Our_Story-dummy.html
@@ -380,25 +380,25 @@
     <section class="partners">
       <h1 class="FP">Our Partner Organizations and Institutions</h1>
       <div class="items" style="position: relative">
-        <div class="item active">
+        <div class="item active partner-item">
           <img src="http://via.placeholder.com/500x500" />
         </div>
-        <div class="item next">
+        <div class="item next partner-item">
           <img src="http://via.placeholder.com/500x500" />
         </div>
-        <div class="item">
+        <div class="item partner-item">
           <img src="http://via.placeholder.com/500x500" />
         </div>
-        <div class="item">
+        <div class="item partner-item">
           <img src="http://via.placeholder.com/500x500" />
         </div>
-        <div class="item">
+        <div class="item partner-item">
           <img src="http://via.placeholder.com/500x500" />
         </div>
-        <div class="item">
+        <div class="item partner-item">
           <img src="http://via.placeholder.com/500x500" />
         </div>
-        <div class="item prev">
+        <div class="item prev partner-item">
           <img src="http://via.placeholder.com/500x500" />
         </div>
         <div class="button-container">
