modified:   About Us/Our story-dummy.css 	modified:   About Us/Our_Story-dummy.html 	modified:   index.html

--- a/About Us/Our_Story-dummy.html
+++ b/About Us/Our_Story-dummy.html
@@ -25,6 +25,7 @@
     ></script>
     <!-- Css Stylesheet -->
     <link rel="stylesheet" href="Our story-dummy.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
     <!-- favicon  -->
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <link
@@ -204,15 +205,15 @@
     <!-- Start: Mission, Vision, Core Values  -->
     <section id="mvc">
       <div class="mvc-container">
-        <div class="card-features">
+        <div class="mvc-features">
           <div class="row">
-            <div class="col col-stories">
-              <div class="Student-Card">
+            <div class="col col-mvc">
+              <div class="mvc-Card">
                 <img src="" class="Mission" alt="" />
               </div>
 
-              <div class="Student-content">
-                <h4 class="py-3 student-name">Mission</h4>
+              <div class="mvc-content">
+                <h4 class="py-3 mvc-name">Mission</h4>
                 <p>
                   ScholarLink aims to empower students by providing them access
                   to quality mentorship and education that enables them to reach
@@ -221,13 +222,13 @@
               </div>
             </div>
 
-            <div class="col col-stories">
-              <div class="Student-Card">
+            <div class="col col-mvc">
+              <div class="mvc-Card">
                 <img src="" class="Vission" alt="" />
               </div>
 
-              <div class="Student-content">
-                <h4 class="py-3 student-name">Vision</h4>
+              <div class="mvc-content">
+                <h4 class="py-3 mvc-name">Vision</h4>
                 <p>
                   ScholarLink envisions a future where every student has equal
                   opportunities for personal growth, academic achievement, and
@@ -236,13 +237,13 @@
               </div>
             </div>
 
-            <div class="col col-stories">
-              <div class="Student-Card">
+            <div class="col col-mvc">
+              <div class="mvc-Card">
                 <img src="" class="Core-Values" alt="" />
               </div>
 
-              <div class="Student-content">
-                <h4 class="py-3 student-name">Core Values</h4>
+              <div class="mvc-content">
+                <h4 class="py-3 mvc-name">Core Values</h4>
                 <p>
                   Our core values are Excellence, Integrity, and Inclusivity.
                 </p>
@@ -378,7 +379,7 @@
 
     <!-- Start: Partner NGO'S  -->
     <section class="partners">
-      <h1 class="FP">Our Partner Organizations and Institutions</h1>
+      <h1 class="FP">Our Partners</h1>
       <div class="items" style="position: relative">
         <div class="item active partner-item">
           <img src="http://via.placeholder.com/500x500" />
@@ -408,6 +409,9 @@
       </div>
     </section>
     <!-- End: Partner NGO'S  -->
+
+
+    </div>
 
     <section class="footer-clean">
       <footer>
