--- a/About Us/Our_Story-dummy.html
+++ b/About Us/Our_Story-dummy.html
@@ -382,25 +382,25 @@
       <h1 class="FP">Our Partners</h1>
       <div class="items" style="position: relative">
         <div class="item active partner-item">
-          <img src="http://via.placeholder.com/500x500" />
+          <img src="/assets/Ateneo-Davao-Logo.png" />
         </div>
         <div class="item next partner-item">
-          <img src="http://via.placeholder.com/500x500" />
+          <img src="/assets/CebuDoctors - Logo.jpg" />
         </div>
         <div class="item partner-item">
-          <img src="http://via.placeholder.com/500x500" />
+          <img src="/assets/CTU_new_logo.png" />
         </div>
         <div class="item partner-item">
-          <img src="http://via.placeholder.com/500x500" />
+          <img src="/assets/MSU - Gensan_logo.png" />
         </div>
         <div class="item partner-item">
-          <img src="http://via.placeholder.com/500x500" />
+          <img src="/assets/PLM-Logo.png" />
         </div>
         <div class="item partner-item">
-          <img src="http://via.placeholder.com/500x500" />
+          <img src="/assets/SanBeda-Logo.gif" />
         </div>
         <div class="item prev partner-item">
-          <img src="http://via.placeholder.com/500x500" />
+          <img src="/assets/UP-Logo.png" />
         </div>
         <div class="button-container">
           <div class="button"><i class="fas fa-angle-left"></i></div>
@@ -410,8 +410,13 @@
     </section>
     <!-- End: Partner NGO'S  -->
 
-
-    </div>
+    <section class="container text-center">
+      <h3 style="color: white; text-align: center">
+        Sign up now and unlock a world of opportunities and mentorship that will
+        guide you towards success.
+      </h3>
+      <button class="btn cta-ourstory">SIGN UP NOW</button>
+    </section>
 
     <section class="footer-clean">
       <footer>
