updated footer all pages

--- a/scholarships/government.html
+++ b/scholarships/government.html
@@ -34,7 +34,7 @@
 
        <!--CSS Links-->
     <link rel="stylesheet" href="scholarship.css" />
-
+    <link rel="stylesheet" href="../css/footer.css">
 
     <!-- favicon  -->
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
