put the existing files to its corresponding folder

--- a/About-Us/Our_Story-dummy.html
+++ b/About-Us/Our_Story-dummy.html
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <a class="navbar-brand mx-4" href="http://127.0.0.1:5500/index.html">
           <img
-            src="/About Us/about  imgs/logo.png"
+            src="/assets/logo.png"
             style="height: 60px"
             alt="owl"
           />
@@ -80,7 +80,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="Our_Story-dummy.html"
+                  <a class="dropdown-item" href="/About-Us/Our_Story-dummy.html"
                     >Our Story</a
                   >
                 </li>
@@ -88,7 +88,7 @@
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a class="dropdown-item" href="How_It_Works-dummy.html"
+                  <a class="dropdown-item" href="/About-Us/How_It_Works-dummy.html"
                     >How It Works?</a
                   >
                 </li>
@@ -480,6 +480,6 @@
     </section>
     <!-- End:Footer -->
     <script src="index.js"></script>
-    <script src="Our Story-dummy.js"></script>
+    <script src="/About-Us/Our Story-dummy.js"></script>
   </body>
 </html>
