--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/About Us/Our_Story-dummy.html"
+                  <a class="dropdown-item" href="About-Us/Our_Story-dummy.html"
                     >Our Story</a
                   >
                 </li>
@@ -92,7 +92,7 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="/About Us/How_It_Works-dummy.html"
+                    href="/About-Us/How_It_Works-dummy.html"
                     >How It Works?</a
                   >
                 </li>
