modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@
 
       <div class="container text-center mentor-footer">
         <h3
+          class="cta-h3"
           style="
             color: white;
             text-align: center;
@@ -753,7 +754,7 @@
       </div>
 
       <div class="container text-center success-footer">
-        <h3>
+        <h3 class="success-h3">
           <i
             class="fa1 fa fa-quote-left"
             aria-hidden="true"
@@ -853,7 +854,7 @@
         >
       </div>
     </section>
-    <hr>
+    <hr />
 
     <section class="footer-clean">
       <footer>
