--- a/About-Us/How_It_Works-dummy.html
+++ b/About-Us/How_It_Works-dummy.html
@@ -38,8 +38,12 @@
     <!-- Start: Navbar  -->
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand mx-4" href="index.html">
-          <img src="about  imgs/logo.png" style="height: 60px" alt="owl" />
+        <a class="navbar-brand mx-4" href="http://127.0.0.1:5500/index.html">
+          <img
+            src="/About Us/about  imgs/logo.png"
+            style="height: 60px"
+            alt="owl"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -58,7 +62,7 @@
               <a
                 class="nav-link"
                 aria-current="page"
-                href="index.html"
+                href="http://127.0.0.1:5500/index.html"
                 onclick="setActiveLink(this)"
                 >Home</a
               >
@@ -135,7 +139,6 @@
               <a
                 class="nav-link"
                 href="http://127.0.0.1:5500/scholarships/scholarship.html"
-                onclick="setActiveLink(this)"
               >
                 Scholarships
               </a>
@@ -188,7 +191,7 @@
 
         <div class="card-wrapper">
           <div class="card-item">
-            <img src="assets/step1.png" alt="" />
+            <img src="about  imgs/step1.png" alt="" />
             <div class="card-info">
               <p><a href="#" class="card-title"></a></p>
 
@@ -201,7 +204,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src="assets/Step 2.png" alt="" />
+            <img src="about  imgs/Step 2.png" alt="" />
             <div class="card-info">
               <p>
                 <a href="#" class="card-title"></a>
@@ -216,7 +219,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src="assets/step3.png" alt="" />
+            <img src="about  imgs/step3.png" alt="" />
             <div class="card-info">
               <p><a href="#" class="card-title"></a></p>
 
@@ -229,7 +232,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src="assets/step4.png" alt="" />
+            <img src="about  imgs/step4.png" alt="" />
             <div class="card-info">
               <p><a href="#" class="card-title"></a></p>
 
@@ -242,7 +245,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src="assets/step5.png" alt="" />
+            <img src="about  imgs/step5.png" alt="" />
             <div class="card-info">
               <p><a href="#" class="card-title"></a></p>
 
@@ -255,7 +258,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src="assets/step6.png" alt="" />
+            <img src="about  imgs/step6.png" alt="" />
             <div class="card-info">
               <p><a href="#" class="card-title"></a></p>
 
