modified:   support/support.css 	modified:   support/terms-conditions.html

--- a/support/terms-conditions.html
+++ b/support/terms-conditions.html
@@ -188,11 +188,11 @@
                     </div>
                     <div class="tabs_content">
                        <div class="tab_head">
-                         <h2>Terms of Usage and Privacy Policy</h2>
+                         <h2 class="terms-title" >Terms of Usage and Privacy Policy</h2>
                        </div>
                        <div class="tab_body">
                          <div class="tab_item tab_item_1">
-                             <h3>Terms of Use</h3>
+                             <h3 class="terms-sub">Terms of Use</h3>
                              <p>Welcome to ScholarLink! These TERMS OF USE ("Terms") apply to your use of the ScholarLink website and any services offered through the website (collectively, the "Service"). By using the Service, you agree to these Terms, as well as our Privacy Policy, which describes how we collect, use, and share your information.</p>
                            <p>Eligibility: To use the Service, you must be at least 18 years old, or if you are under 18, you must have your parent or legal guardian's permission to use the Service.</p>
                            <p>Registration: To access certain features of the Service, you may be required to register and create an account. You agree to provide accurate, current, and complete information during the registration process, and to keep your account information up to date.</p>
@@ -204,24 +204,24 @@
                             <p>Dispute Resolution: Any dispute arising out of or relating to these Terms or the Service shall be resolved through binding arbitration in accordance with the rules of the American Arbitration Association, and judgment on the award rendered by the arbitrator(s) may be entered in any court having jurisdiction thereof.</p>
                         </div>
                          <div class="tab_item tab_item_2" style="display: none;">
-                             <h3>Intellectual Property Rights</h3>
+                             <h3 class="terms-sub">Intellectual Property Rights</h3>
                            <p>The Service and all content and materials included on the Service, such as text, graphics, logos, images, and software, are the property of ScholarLink or its licensors and are protected by copyright, trademark, and other laws. You may not use any of this content or materials without our express written consent.</p>
                          </div>
                          <div class="tab_item tab_item_3"  style="display: none;">
-                             <h3>Prohibited Activities</h3>
+                             <h3 class="terms-sub">Prohibited Activities</h3>
                              <p>You may not use the Service for any illegal or unauthorized purpose, or engage in any conduct that violates these Terms or our policies. This includes, but is not limited to, harassing or threatening other users, transmitting viruses or other harmful code, or interfering with the Service.</p>
                          </div>
                          <div class="tab_item tab_item_4"  style="display: none;">
-                             <h3>Termination Clause</h3>
+                             <h3 class="terms-sub">Termination Clause</h3>
                            <p>ScholarLink may terminate your access to the Service at any time, for any reason, without notice to you.</p>
                          </div>
                          <div class="tab_item tab_item_5"  style="display: none;">
-                             <h3>Governing Law</h3>
+                             <h3 class="terms-sub">Governing Law</h3>
                            <p>These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which ScholarLink is located, without giving effect to any principles of conflicts of law.</p>
                         
                          </div>
                          <div class="tab_item tab_item_6"  style="display: none;">
-                            <h3>Privacy Policy</h3>
+                            <h3 class="terms-sub">Privacy Policy</h3>
                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
@@ -230,7 +230,7 @@
                        <div class="tab_foot flex_align_justify">
                         <br>
                         <br>
-                         <p>By using this website, I agree to its Terms of Usage and Privacy Policy.</p>
+                         <p class="terms-footer">By using this website, I agree to its Terms of Usage and Privacy Policy.</p>
                        </div>
                     </div>
                 </div>
