Fixed the css inconsistency in our story page

--- a/About-Us/Our_Story-dummy.html
+++ b/About-Us/Our_Story-dummy.html
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <a class="navbar-brand mx-4" href="http://127.0.0.1:5500/index.html">
           <img
-            src="/About Us/about  imgs/logo.png"
+            src="/About-Us/about  imgs/logo.png"
             style="height: 60px"
             alt="owl"
           />
@@ -195,15 +195,15 @@
 
     <!-- Start: Mission, Vision, Core Values  -->
     <section>
-      <div class="Students">
-        <div class="card-features">
+      <div class="mvc-container">
+        <div class="mvc-features">
           <div class="row">
-            <div class="col col-stories">
-              <div class="Student-Card">
+            <div class="col col-mvc ">
+              <div class="mvc-name">
                 <img src="" class="Mission" alt="" />
               </div>
 
-              <div class="Student-content">
+              <div class="mvc-content">
                 <h4 class="py-3 student-name">Mission</h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -214,12 +214,12 @@
               </div>
             </div>
 
-            <div class="col col-stories">
+            <div class="col col-mvc ">
               <div class="Student-Card">
                 <img src="" class="Vission" alt="" />
               </div>
 
-              <div class="Student-content">
+              <div class="mvc-content">
                 <h4 class="py-3 student-name">Vission</h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
@@ -231,12 +231,12 @@
               </div>
             </div>
 
-            <div class="col col-stories">
+            <div class="col col-mvc ">
               <div class="Student-Card">
                 <img src="" class="Core-Values" alt="" />
               </div>
 
-              <div class="Student-content">
+              <div class="mvc-content">
                 <h4 class="py-3 student-name">Core Values</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
