--- a/About-Us/How_It_Works-dummy.html
+++ b/About-Us/How_It_Works-dummy.html
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <a class="navbar-brand mx-4" href="http://127.0.0.1:5500/index.html">
           <img
-            src="/About Us/about  imgs/logo.png"
+            src="/About-Us/about  imgs/logo.png"
             style="height: 60px"
             alt="owl"
           />
