modified:   index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/scholarships/scholarship.html"
+                href="./scholarships/scholarship.html"
                 onclick="setActiveLink(this)"
               >
                 Scholarships
@@ -158,13 +158,15 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/support/support.html"
+                  <a class="dropdown-item" href="./support/support.html"
                     >FAQs and Contacts</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/support/terms-conditions.html"
+                  <a
+                    class="dropdown-item"
+                    href="./support/terms-conditions.html"
                     >Terms of Usage and Privacy Policy</a
                   >
                 </li>
