--- a/About-Us/How_It_Works-dummy.html
+++ b/About-Us/How_It_Works-dummy.html
@@ -7,6 +7,16 @@
     <title>ScholarLink</title>
 
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
+    <link rel="stylesheet" href="/css/footer.css" />
+
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
@@ -24,7 +34,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="How it works-dummy.css" />
+    <link rel="stylesheet" href="/About-Us/How it works-dummy.css" />
     <!-- favicon  -->
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <link
@@ -33,17 +43,11 @@
     />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   </head>
-
   <body>
-    <!-- Start: Navbar  -->
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand mx-4" href="http://127.0.0.1:5500/index.html">
-          <img
-            src="/About-Us/about  imgs/logo.png"
-            style="height: 60px"
-            alt="owl"
-          />
+          <img src="/assets/logo.png" style="height: 60px" alt="owl" />
         </a>
         <button
           class="navbar-toggler"
@@ -60,7 +64,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 aria-current="page"
                 href="http://127.0.0.1:5500/index.html"
                 onclick="setActiveLink(this)"
@@ -69,7 +73,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle active"
+                class="nav-link dropdown-toggle"
                 href="#"
                 onclick="setActiveLink(this)"
                 role="button"
@@ -80,15 +84,15 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="Our_Story-dummy.html"
+                  <a class="dropdown-item" href="/About-Us/Our_Story-dummy.html"
                     >Our Story</a
                   >
                 </li>
+                <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="How_It_Works-dummy.html"
+                  <a
+                    class="dropdown-item"
+                    href="/About-Us/How_It_Works-dummy.html"
                     >How It Works?</a
                   >
                 </li>
@@ -107,9 +111,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Find A Mentor</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
+                <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">Become A Mentor</a></li>
               </ul>
             </li>
@@ -127,9 +129,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Affiliate List</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
+                <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Become An Affiliate</a>
                 </li>
@@ -138,7 +138,8 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="http://127.0.0.1:5500/scholarships/scholarship.html"
+                href="/scholarships/scholarship.html"
+                onclick="setActiveLink(this)"
               >
                 Scholarships
               </a>
@@ -156,12 +157,14 @@
                 Support Center
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">FAQs and Contacts</a></li>
                 <li>
-                  <hr class="dropdown-divider" />
+                  <a class="dropdown-item" href="/support/support.html"
+                    >FAQs and Contacts</a
+                  >
                 </li>
+                <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="/support/terms-conditions.html"
                     >Terms of Usage and Privacy Policy</a
                   >
                 </li>
@@ -169,21 +172,18 @@
             </li>
           </ul>
 
-          <button class="btn btn-login custom-border" type="submit">
-            Login
-          </button>
-          <button class="btn btn-signup custom-border mx-3" type="submit">
-            Signup
+          <button class="btn btn-login custom-border mx-3" type="submit">
+            Get Started &nbsp; <i class="fas fa-chevron-right"></i>
           </button>
         </div>
       </div>
     </nav>
-    <!-- End: Navbar  -->
+
 
     <!-- Start: How It Works  -->
-    <section class="my-5">
-      <div class="container text-center">
-        <h2>Six-Easy-Steps to Become a Farmer Vendor</h2>
+    <section class="Guides">
+      <div class="Steps text-center">
+        <h2>Six-Easy-Steps to Be a part of ScholarLink</h2>
       </div>
       <div class="container text-center wrapper my-3">
         <button class="arrow prev">&lt;</button>
