--- a/About-Us/Our_Story-dummy.html
+++ b/About-Us/Our_Story-dummy.html
@@ -65,7 +65,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="http://127.0.0.1:5500/index.html"
                 onclick="setActiveLink(this)"
@@ -74,7 +74,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle active"
                 href="#"
                 onclick="setActiveLink(this)"
                 role="button"
@@ -189,7 +189,7 @@
     </nav>
 
     <!-- Start: How we Started   -->
-    <section class="Shared-stories">
+    <section class="container how-we-started">
       <h1 class="Story">How We Started</h1>
       <h4 class="bg-story">"where it all began"</h4>
       <p class="sh-contents">
@@ -214,7 +214,13 @@
         <div class="mvc-features">
           <div class="row">
             <div class="col col-mvc">
-              <div class="mvc-name">
+              <img
+                src="/assets/corevalues.jpg"
+                alt="Testimonial Image"
+                class="testi-img"
+              />
+
+              <div class="Student-Card">
                 <img src="" class="Mission" alt="" />
               </div>
 
@@ -229,29 +235,40 @@
             </div>
 
             <div class="col col-mvc">
-              <div class="Student-Card">
-                <img src="" class="Vission" alt="" />
-              </div>
-
-              <div class="mvc-content">
-                <h4 class="py-3 student-name">Vission</h4>
-                <p>
-                  ScholarLink envisions a future where every student has equal
-                  opportunities for personal growth, academic achievement, and
-                  career success.
-                </p>
-              </div>
-            </div>
-
-            <div class="col col-mvc">
+              <img
+                src="/assets/mission.png"
+                alt="Testimonial Image"
+                class="testi-img"
+              />
               <div class="Student-Card">
                 <img src="" class="Core-Values" alt="" />
               </div>
 
               <div class="mvc-content">
                 <h4 class="py-3 student-name">Core Values</h4>
+
                 <p>
                   Our core values are excellence, integrity, and inclusivity.
+                </p>
+              </div>
+            </div>
+
+            <div class="col col-mvc">
+              <img
+                src="/assets/vision.jpg"
+                alt="Testimonial Image"
+                class="testi-img"
+              />
+              <div class="Student-Card">
+                <img src="" class="Vission" alt="" />
+              </div>
+
+              <div class="mvc-content">
+                <h4 class="py-3 student-name">Vision</h4>
+                <p>
+                  ScholarLink envisions a future where every student has equal
+                  opportunities for personal growth, academic achievement, and
+                  career success.
                 </p>
               </div>
             </div>
@@ -262,69 +279,150 @@
     <!-- End: Mission, Vision, Core Values  -->
 
     <!-- start: What We Provide Section -->
-    <section id="services">
-      <div class="container what-we-provide">
-        <h1 class="title">Why Choose ScholarLink</h1>
-        <div class="wrapper">
-          <div class="line"></div>
-          <div class="card">
-            <span class="dot"></span>
-            <h3>Mentorship</h3>
+    <section id="testimonials">
+      <h1 class="testimonial-title">What Makes ScholarLink Different?</h1>
+      <div class="wrapper">
+        <div class="center-line">
+          <a href="#" class="scroll-icon"><i class="fas fa-caret-down"></i></a>
+        </div>
+        <div class="row row-1">
+          <section>
+            <img
+              src="/assets/register.svg"
+              alt="Testimonial Image"
+              class="testi-img"
+            />
+            <i class="icon fas fa-home"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i>
+              </span>
+            </div>
             <p>
-              ScholarLink provides personalized mentorship to underprivileged
-              high school students, connecting them with college mentors who
-              offer guidance and support with academic and career planning,
-              college applications, and financial aid. Our mentorship program is
-              designed to empower students and help them achieve their goals, no
-              matter what challenges they may face.
+              We provide personalized mentoring and guidance tailored to each
+              student’s unique needs and goals.
             </p>
-          </div>
-          <div class="card">
-            <span class="dot"></span>
-            <h3>Scholarship Grants</h3>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <img
+              src="/assets/log.svg"
+              alt="Testimonial Image"
+              class="testi-img"
+            />
+            <i class="icon fas fa-star"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
             <p>
-              Our platform offers comprehensive and personalized support to help
-              students identify and apply for scholarship opportunities that fit
-              their individual needs and interests. Our goal is to help students
-              access the financial resources they need to pursue higher
-              education and achieve their academic goals.
+              Our team of experienced mentors are graduates of top universities
+              in the Philippines and abroad.
             </p>
-          </div>
-
-          <div class="card">
-            <span class="dot"></span>
-            <h3>Academic and Career Planning</h3>
+          </section>
+        </div>
+        <div class="row row-1">
+          <section>
+            <img
+              src="/assets/login.svg"
+              alt="Testimonial Image"
+              class="testi-img"
+            />
+            <i class="icon fas fa-rocket"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
             <p>
-              Our team of experts helps students create a plan that fits their
-              individual needs and guides them through every step of the
-              process, from course selection to career exploration. Our goal is
-              to help students build a foundation for success and achieve their
-              dreams.
+              We offer a comprehensive range of services, from academic and
+              career planning to scholarship grants and university applications.
             </p>
-          </div>
-          <div class="card">
-            <span class="dot"></span>
-            <h3>University / College Applications</h3>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <img
+              src="/assets/signup.svg"
+              alt="Testimonial Image"
+              class="testi-img"
+            />
+            <i class="icon fas fa-globe"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
             <p>
-              Our goal is to help students put their best foot forward and
-              increase their chances of getting accepted to their dream schools.
-              We believe that every student deserves the opportunity to pursue
-              higher education, and we're committed to helping them achieve
-              their goals.
+              Our success stories and testimonials from satisfied students speak
+              to the effectiveness of our program.
             </p>
-          </div>
-
-          <div class="card">
-            <span class="dot"></span>
-            <h3>Personality Development Training</h3>
+          </section>
+        </div>
+        <div class="row row-1">
+          <section>
+            <img
+              src="/assets/svg.webp"
+              alt="Testimonial Image"
+              class="testi-img"
+            />
+            <i class="icon fas fa-paper-plane"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
             <p>
-              Our platform offers various tools and resources to help students
-              improve their communication skills, emotional intelligence, and
-              leadership abilities. Our goal is to help students develop the
-              personal qualities and skills needed to succeed in college,
-              career, and life.
+              We prioritize the development of the whole person, not just
+              academic achievement, through our personality development program.
             </p>
-          </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <img
+              src="/assets/svg2.webp"
+              alt="Testimonial Image"
+              class="testi-img"
+            />
+            <i class="icon fas fa-map-marker-alt"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              ScholarLink is committed to providing affordable services to
+              ensure that all students have access to the support they need to
+              succeed.
+            </p>
+          </section>
         </div>
       </div>
     </section>
@@ -332,28 +430,28 @@
 
     <!-- Start: Partner NGO'S  -->
     <section class="partners">
-      <h1 class="FP">Our featured Partners</h1>
+      <div><h1 class="FP">Our Featured Partners</h1></div>
       <div class="items" style="position: relative">
-        <div class="item active">
-          <img src="http://via.placeholder.com/500x500" />
+        <div class="partner-logo active">
+          <img src="/assets/Ateneo-Davao-Logo.png" />
         </div>
-        <div class="item next">
-          <img src="http://via.placeholder.com/500x500" />
+        <div class="partner-logo next">
+          <img src="/assets/CebuDoctors - Logo.jpg" />
         </div>
-        <div class="item">
-          <img src="http://via.placeholder.com/500x500" />
+        <div class="partner-logo">
+          <img src="/assets/CTU_new_logo.png" />
         </div>
-        <div class="item">
-          <img src="http://via.placeholder.com/500x500" />
+        <div class="partner-logo">
+          <img src="/assets/PLM-Logo.png" />
         </div>
-        <div class="item">
-          <img src="http://via.placeholder.com/500x500" />
+        <div class="partner-logo">
+          <img src="/assets/MSU - Gensan_logo.png" />
         </div>
-        <div class="item">
-          <img src="http://via.placeholder.com/500x500" />
+        <div class="partner-logo">
+          <img src="/assets/SanBeda-Logo.gif" />
         </div>
-        <div class="item prev">
-          <img src="http://via.placeholder.com/500x500" />
+        <div class="partner-logo prev">
+          <img src="/assets/UP-Logo.png" />
         </div>
         <div class="button-container">
           <div class="button"><i class="fas fa-angle-left"></i></div>
@@ -361,6 +459,7 @@
         </div>
       </div>
     </section>
+
     <!-- End: Partner NGO'S  -->
 
     <!-- Start:Footer -->
