modified:   About-Us/Our story-dummy.css 	modified:   About-Us/Our_Story-dummy.html

--- a/About-Us/Our_Story-dummy.html
+++ b/About-Us/Our_Story-dummy.html
@@ -459,6 +459,19 @@
         </div>
       </div>
     </section>
+    <div class="container text-center ourstory-footer">
+      <h3>
+        Take the first step towards transforming your academic journey and
+        career goals with ScholarLink.
+      </h3>
+      <h4>
+        Get started now and unlock a world of opportunities and mentorship that
+        will guide you towards success.
+      </h4>
+      <a href="/login-signup/login.html" class="btn cta-ourstory"
+        >Get Started</a
+      >
+    </div>
 
     <!-- End: Partner NGO'S  -->
 
