modified:   About-Us/Our story-dummy.css 	modified:   About-Us/Our_Story-dummy.html

--- a/About-Us/Our_Story-dummy.html
+++ b/About-Us/Our_Story-dummy.html
@@ -225,7 +225,7 @@
               </div>
 
               <div class="mvc-content">
-                <h4 class="py-3 student-name">Mission</h4>
+                <h4 class="py-3 mvc-name">Mission</h4>
                 <p>
                   ScholarLink aims to empower students by providing them access
                   to quality mentorship and education that enables them to reach
@@ -245,7 +245,7 @@
               </div>
 
               <div class="mvc-content">
-                <h4 class="py-3 student-name">Core Values</h4>
+                <h4 class="py-3 mvc-name">Core Values</h4>
 
                 <p>
                   Our core values are excellence, integrity, and inclusivity.
@@ -264,7 +264,7 @@
               </div>
 
               <div class="mvc-content">
-                <h4 class="py-3 student-name">Vision</h4>
+                <h4 class="py-3 mvc-name">Vision</h4>
                 <p>
                   ScholarLink envisions a future where every student has equal
                   opportunities for personal growth, academic achievement, and
