--- a/index.html
+++ b/index.html
@@ -858,6 +858,38 @@
     </section>
     <hr />
 
+    <section id="featured-on">
+      <div class="image-container">
+        <div class="container text-center success-footer">
+          <h3>Featured on:</h3>
+        </div>
+        <div class="image-wrapper">
+          <div>
+            <img src="assets/forbes.png" alt="" class="featured-img" />
+          </div>
+          <div>
+            <img src="assets/gma.jpg" alt="" class="featured-img" />
+          </div>
+          <div>
+            <img src="assets/anc.png" alt="" class="featured-img" />
+          </div>
+          <div>
+            <img src="assets/abs.webp" alt="" class="featured-img" />
+          </div>
+          <div>
+            <img
+              src="assets/Philippine_Daily_Inquirer.jpg"
+              alt=""
+              class="featured-img"
+            />
+          </div>
+          <div>
+            <img src="assets/CNN.png" alt="" class="featured-img" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="footer-clean">
       <footer>
         <div class="container footer-container">
