affiliate page added not yet done

--- a/become a mentor/index.html
+++ b/become a mentor/index.html
@@ -13,41 +13,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
-  />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
+
+    <link rel="stylesheet" href="../css/footer.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 
 
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-    crossorigin="anonymous"
-  />
+    <!--FONTAWESOME ICONS-->
+    <script src="https://kit.fontawesome.com/3ce7f5ba6a.js" crossorigin="anonymous"></script>
 
-
-  <!--FONTAWESOME ICONS-->
-  <script
-    src="https://kit.fontawesome.com/3ce7f5ba6a.js"
-    crossorigin="anonymous"
-  ></script>
-
-  <link rel="stylesheet" href="./css/styles.css" />
-  <!-- favicon  -->
-  <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon" />
-  <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- favicon  -->
+    <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 
-</head>
+
 
 <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
@@ -325,8 +310,49 @@
     </main>
     <!-- Footer-->
 
-    </footer>
-
-</body>
-
+    <section class="footer-clean">
+      <footer>
+        <div class="container footer-container">
+          <div class="row justify-content-center">
+            <div class="col-sm-4 col-md-3 item">
+              <h3>About Us</h3>
+              <ul>
+                <li><a href="./About-Us/Our_Story-dummy.html">Our Story</a></li>
+                <li><a href="./About-Us/How_It_Works-dummy.html">How It Works?</a></li>
+              </ul>
+            </div>
+  
+            <div class="col-sm-4 col-md-3 item">
+              <h3>Our Affiliates</h3>
+              <ul>
+                <li><a href="./affiliates/affiliates.html">Affiliate List</a></li>
+                <li><a href="./affiliates/become-an-affiliate.html">Become An Affiliate</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-4 col-md-3 item">
+              <h3>Scholarships</h3>
+              <ul>
+                <li><a href="./scholarships/ngo.html">NGO Funded</a></li>
+                <li>
+                  <a href="./scholarships/private.html">Privately Funded</a>
+                </li>
+                <li>
+                  <a href="./scholarships/government.html">Government Funded</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-3 item social">
+              <a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
+                  class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
+                href="#"><i class="icon ion-social-instagram"></i></a>
+              <p class="copyright">ScholarLink © 2023 All Rights Reserved.</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
