modified:   About-Us/How_It_Works-dummy.html 	modified:   About-Us/Our_Story-dummy.html 	modified:   affiliates/affiliates.html 	renamed:    become a mentor/index.html -> become a mentor/becomeMentor.html 	modified:   index.html 	modified:   support/support.html 	modified:   support/terms-conditions.html

--- a/affiliates/affiliates.html
+++ b/affiliates/affiliates.html
@@ -77,7 +77,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="#"
+                href="http://127.0.0.1:5500/index.html"
                 onclick="setActiveLink(this)"
                 >Home</a
               >
@@ -95,9 +95,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="../About-Us/Our_Story-dummy.html"
+                  <a class="dropdown-item" href="/About-Us/Our_Story-dummy.html"
                     >Our Story</a
                   >
                 </li>
@@ -107,7 +105,7 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="../About-Us/How_It_Works-dummy.html"
+                    href="/About-Us/How_It_Works-dummy.html"
                     >How It Works?</a
                   >
                 </li>
@@ -126,15 +124,15 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../become a mentor/index.html"
-                    >Find A Mentor</a
-                  >
+                  <a class="dropdown-item" href="#">Find A Mentor</a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../become a mentor/index.html"
+                  <a
+                    class="dropdown-item"
+                    href="/become a mentor/becomeMentor.html"
                     >Become A Mentor</a
                   >
                 </li>
@@ -154,26 +152,20 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../affiliates/affiliates.html"
-                    >Affiliate List</a
-                  >
+                  <a class="dropdown-item" href="#">Affiliate List</a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="../affiliates/become-an-affiliate.html"
-                    >Become An Affiliate</a
-                  >
+                  <a class="dropdown-item" href="#">Become An Affiliate</a>
                 </li>
               </ul>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="../scholarships/scholarship.html"
+                href="/scholarships/scholarship.html"
                 onclick="setActiveLink(this)"
               >
                 Scholarships
@@ -193,7 +185,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../support/support.html"
+                  <a class="dropdown-item" href="/support/support.html"
                     >FAQs and Contacts</a
                   >
                 </li>
@@ -201,9 +193,7 @@
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="../support/terms-conditions.html"
+                  <a class="dropdown-item" href="/support/terms-conditions.html"
                     >Terms of Usage and Privacy Policy</a
                   >
                 </li>
