--- a/become a mentor/becomeMentor.html
+++ b/become a mentor/becomeMentor.html
@@ -49,7 +49,7 @@
                 <div class="collapse navbar-collapse mx-4" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"
+                            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/index.html"
                                 onclick="setActiveLink(this)">Home</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -89,12 +89,12 @@
                                 Our Affiliates
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Affiliate List</a></li>
+                                <li><a class="dropdown-item" href="/affiliates/affiliates.html">Affiliate List</a></li>
                                 <li>
                                     <hr class="dropdown-divider" />
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Become An Affiliate</a>
+                                    <a class="dropdown-item" href="/affiliates/become-an-affiliate.html">Become An Affiliate</a>
                                 </li>
                             </ul>
                         </li>
