--- a/support/terms-conditions.html
+++ b/support/terms-conditions.html
@@ -106,7 +106,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Find A Mentor</a></li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">Become A Mentor</a></li>
+                  <li><a class="dropdown-item" href="/become a mentor/becomeMentor.html">Become A Mentor</a></li>
                 </ul>
               </li>
   
@@ -122,10 +122,10 @@
                   Our Affiliates
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Affiliate List</a></li>
+                  <li><a class="dropdown-item" href="/affiliates/affiliates.html">Affiliate List</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#">Become An Affiliate</a>
+                    <a class="dropdown-item" href="/affiliates/become-an-affiliate.html">Become An Affiliate</a>
                   </li>
                 </ul>
               </li>
