affiliate pages updated

--- a/affiliates/become-an-affiliate.html
+++ b/affiliates/become-an-affiliate.html
@@ -130,7 +130,7 @@
 
   <div class="hero-image">
     <div class="hero-text">
-      <h1 style="font-size:50px">I am John Doe</h1>
+      <h1 style="font-size:50px">Become a scholarship affiliate and help change lives.</h1>
       <p>And I'm a Photographer</p>
       <button>Become An Affiliate</button>
     </div>
