--- a/About-Us/How_It_Works-dummy.html
+++ b/About-Us/How_It_Works-dummy.html
@@ -80,12 +80,12 @@
               Our Affiliates
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Affiliate List</a></li>
+              <li><a class="dropdown-item" href="../affiliates/affiliates.html">Affiliate List</a></li>
               <li>
                 <hr class="dropdown-divider" />
               </li>
               <li>
-                <a class="dropdown-item" href="#">Become An Affiliate</a>
+                <a class="dropdown-item" href="../affiliates/become-an-affiliate.html">Become An Affiliate</a>
               </li>
             </ul>
           </li>
