add photo on affiliate page

--- a/affiliates/affiliates.html
+++ b/affiliates/affiliates.html
@@ -132,157 +132,6 @@
         <button class="btn btn-login custom-border mx-3" type="submit">
           Get Started &nbsp; <i class="fas fa-chevron-right"></i>
         </button>
-<<<<<<< HEAD
-=======
-        <div class="collapse navbar-collapse mx-4" id="navbarTogglerDemo02">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="http://127.0.0.1:5500/index.html"
-                onclick="setActiveLink(this)"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                onclick="setActiveLink(this)"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                About Us
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="/About-Us/Our_Story-dummy.html"
-                    >Our Story</a
-                  >
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/About-Us/How_It_Works-dummy.html"
-                    >How It Works?</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                onclick="setActiveLink(this)"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Our Mentors
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="#">Find A Mentor</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/become a mentor/becomeMentor.html"
-                    >Become A Mentor</a
-                  >
-                </li>
-              </ul>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                onclick="setActiveLink(this)"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Our Affiliates
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="#">Affiliate List</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Become An Affiliate</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/scholarships/scholarship.html"
-                onclick="setActiveLink(this)"
-              >
-                Scholarships
-              </a>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                onclick="setActiveLink(this)"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Support Center
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="/support/support.html"
-                    >FAQs and Contacts</a
-                  >
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/support/terms-conditions.html"
-                    >Terms of Usage and Privacy Policy</a
-                  >
-                </li>
-              </ul>
-            </li>
-          </ul>
-
-          <button class="btn btn-login custom-border mx-3" type="submit">
-            Get Started &nbsp; <i class="fas fa-chevron-right"></i>
-          </button>
-        </div>
-      </div>
-    </nav>
-    <!--------------End of Navbar-------------->
-
-    <!-------------Hero Image---------------->
-
-    <div class="hero-image">
-      <div class="hero-text">
-        <h1 style="font-size: 50px">
-          Education is the passport to the future, for tomorrow belongs to those
-          who prepare for it today.
-        </h1>
-        <p>Malcolm X</p>
-        <!-- <button></button> -->
->>>>>>> d8b89032eaead41e91c356b24ced3195482ce2e0
       </div>
     </div>
   </nav>
@@ -482,7 +331,7 @@
 
       <div class="wrapper">
         <a href="#">
-          <img src="../assets/abacada foundation.png" alt="" />
+          <img src="../assets/Sebastian2.png" alt="" />
         </a>
         <div class="title">Sebastian Charitable Trusts</div>
         <div class="place">Taguig City, Philippines</div>
@@ -550,10 +399,10 @@
     <div class="container-aff">
       <div class="wrapper">
         <a href="#">
-          <img src="#" alt="" />
+          <img src="../assets/Villanueva.png" alt="" />
         </a>
-        <div class="title">Andrew Neil</div>
-        <div class="place">Surkhet, Nepal</div>
+        <div class="title">Villanueva Foundation Corp.</div>
+        <div class="place">Cavite, Philippines</div>
       </div>
       <div class="content">
         <p>User Interface Designer and <br />front-end developer</p>
